tests/snapshot/error/source_locations/destructure/array/get_iterator.exp
Error: 
  ┌ source_locations/destructure/array/get_iterator.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at <anonymous> (source_locations/destructure/array/get_iterator.js:3:11)
  at <global> (source_locations/destructure/array/get_iterator.js:7:5)